# f4se-mirror

./: Include.cmake
src/: CMakeLists.txt  version.cmake
src/common/: CMakeLists.txt  IErrors.h  ITypes.h  common.vcxproj  common_vc11.vcxproj  common_vc12.vcxproj  common_vc14.vcxproj  common_vc9.vcxproj
src/f4se/: CMakeLists.txt  f4se.sln
src/f4se/f4se/: BSSkin.h  CMakeLists.txt  GameAPI.cpp  GameAPI.h  GameForms.h  GameInput.h  GameObjects.h  PapyrusGame.cpp  PapyrusObjects.h  PapyrusVM.h  PluginManager.cpp  PluginManager.h  ScaleformValue.h  f4se.cpp  f4se.vcxproj  f4se_dll.vcxproj  f4se_dll.vcxproj.filters  f4se_game.vcxproj  f4se_game.vcxproj.filters
src/f4se/f4se_common/: CMakeLists.txt  Options.cpp  Options.h  Utilities.cpp  f4se_common.vcxproj  f4se_common.vcxproj.filters  f4se_common_vc14.vcxproj
src/f4se/f4se_loader/: CMakeLists.txt  f4se_loader.vcxproj  f4se_loader.vcxproj.filters  main.cpp
src/f4se/f4se_loader_common/: CMakeLists.txt  f4se_loader_common.vcxproj
src/f4se/f4se_steam_loader/: CMakeLists.txt  f4se_steam_loader.vcxproj
