add_library(common STATIC
  IBufferStream.cpp
  IBufferStream.h
  ICriticalSection.h
  IDataStream.cpp
  IDataStream.h
  IDebugLog.cpp
  IDebugLog.h
  IDirectoryIterator.cpp
  IDirectoryIterator.h
  IErrors.cpp
  IErrors.h
  IEvent.cpp
  IEvent.h
  IFileStream.cpp
  IFileStream.h
  IInterlockedLong.cpp
  IInterlockedLong.h
  IMutex.cpp
  IMutex.h
  IPrefix.cpp
  IPrefix.h
  ISegmentStream.cpp
  ISegmentStream.h
  ISingleton.cpp
  ISingleton.h
  ITimer.cpp
  ITimer.h
  ITypes.cpp
  ITypes.h
)