add_compile_definitions(
  _USRDLL
  F4SE_EXPORTS
  RUNTIME
  RUNTIME_VERSION=${F4SE_RUNTIME_VERSION_HEX}
)

add_library(f4se_dll SHARED)
set_target_properties(f4se_dll PROPERTIES
  OUTPUT_NAME f4se_${F4SE_RUNTIME_VERSION_TAG}
)

add_library(f4se_lib STATIC)
set_target_properties(f4se_lib PROPERTIES
  OUTPUT_NAME f4se_static_${F4SE_RUNTIME_VERSION_TAG}
)

foreach(VARIANT IN ITEMS f4se_dll f4se_lib)
  target_sources(${VARIANT} PRIVATE
    ../f4se_common/f4se_version.rc
    bhkWorld.cpp
    bhkWorld.h
    BSCollision.cpp
    BSCollision.h
    BSGeometry.cpp
    BSGeometry.h
    BSGraphics.cpp
    BSGraphics.h
    BSLight.cpp
    BSLight.h
    BSModelDB.cpp
    BSModelDB.h
    BSParticleShaderEmitter.cpp
    BSParticleShaderEmitter.h
    BSSkin.cpp
    BSSkin.h
    CustomMenu.cpp
    CustomMenu.h
    f4se.cpp
    GameAPI.cpp
    GameAPI.h
    GameCamera.cpp
    GameCamera.h
    GameCustomization.cpp
    GameCustomization.h
    GameData.cpp
    GameData.h
    GameEvents.cpp
    GameEvents.h
    GameExtraData.cpp
    GameExtraData.h
    GameFormComponents.cpp
    GameFormComponents.h
    GameForms.cpp
    GameForms.h
    GameInput.cpp
    GameInput.h
    GameMemory.cpp
    GameMemory.h
    GameMenus.cpp
    GameMenus.h
    GameMessages.cpp
    GameMessages.h
    GameObjects.cpp
    GameObjects.h
    GameReferences.cpp
    GameReferences.h
    GameRTTI.cpp
    GameRTTI.h
    GameSettings.cpp
    GameSettings.h
    GameStreams.cpp
    GameStreams.h
    GameThreads.cpp
    GameThreads.h
    GameTypes.cpp
    GameTypes.h
    GameUtilities.cpp
    GameUtilities.h
    GameWorkshop.cpp
    GameWorkshop.h
    Hooks_Camera.cpp
    Hooks_Camera.h
    Hooks_Debug.cpp
    Hooks_Debug.h
    Hooks_GameData.cpp
    Hooks_GameData.h
    Hooks_Gameplay.cpp
    Hooks_Gameplay.h
    Hooks_Input.cpp
    Hooks_Input.h
    Hooks_Memory.cpp
    Hooks_Memory.h
    Hooks_ObScript.cpp
    Hooks_ObScript.h
    Hooks_Papyrus.cpp
    Hooks_Papyrus.h
    Hooks_SaveLoad.cpp
    Hooks_SaveLoad.h
    Hooks_Scaleform.cpp
    Hooks_Scaleform.h
    Hooks_Threads.cpp
    Hooks_Threads.h
    InputMap.cpp
    InputMap.h
    InternalSerialization.cpp
    InternalSerialization.h
    NiCloningProcess.h
    NiExtraData.cpp
    NiExtraData.h
    NiMaterials.cpp
    NiMaterials.h
    NiNodes.cpp
    NiNodes.h
    NiObjects.cpp
    NiObjects.h
    NiProperties.cpp
    NiProperties.h
    NiRTTI.cpp
    NiRTTI.h
    NiSerialization.cpp
    NiSerialization.h
    NiTextures.cpp
    NiTextures.h
    NiTypes.cpp
    NiTypes.h
    ObScript.cpp
    ObScript.h
    PapyrusActor.cpp
    PapyrusActor.h
    PapyrusActorBase.cpp
    PapyrusActorBase.h
    PapyrusArgs.cpp
    PapyrusArgs.h
    PapyrusArmor.cpp
    PapyrusArmor.h
    PapyrusArmorAddon.cpp
    PapyrusArmorAddon.h
    PapyrusCell.cpp
    PapyrusCell.h
    PapyrusComponent.cpp
    PapyrusComponent.h
    PapyrusConstructibleObject.cpp
    PapyrusConstructibleObject.h
    PapyrusDefaultObject.cpp
    PapyrusDefaultObject.h
    PapyrusDelayFunctors.cpp
    PapyrusDelayFunctors.h
    PapyrusEncounterZone.cpp
    PapyrusEncounterZone.h
    PapyrusEquipSlot.cpp
    PapyrusEquipSlot.h
    PapyrusEvents.cpp
    PapyrusEvents.h
    PapyrusF4SE.cpp
    PapyrusF4SE.h
    PapyrusFavoritesManager.cpp
    PapyrusFavoritesManager.h
    PapyrusForm.cpp
    PapyrusForm.h
    PapyrusGame.cpp
    PapyrusGame.h
    PapyrusHeadPart.cpp
    PapyrusHeadPart.h
    PapyrusInput.cpp
    PapyrusInput.h
    PapyrusInstanceData.cpp
    PapyrusInstanceData.h
    PapyrusInterfaces.cpp
    PapyrusInterfaces.h
    PapyrusLocation.cpp
    PapyrusLocation.h
    PapyrusMaterialSwap.cpp
    PapyrusMaterialSwap.h
    PapyrusMath.cpp
    PapyrusMath.h
    PapyrusMiscObject.cpp
    PapyrusMiscObject.h
    PapyrusNativeFunctions.cpp
    PapyrusNativeFunctions.h
    PapyrusObjectMod.cpp
    PapyrusObjectMod.h
    PapyrusObjectReference.cpp
    PapyrusObjectReference.h
    PapyrusObjects.cpp
    PapyrusObjects.h
    PapyrusPerk.cpp
    PapyrusPerk.h
    PapyrusScaleformAdapter.cpp
    PapyrusScaleformAdapter.h
    PapyrusScriptObject.cpp
    PapyrusScriptObject.h
    PapyrusSerialization.cpp
    PapyrusSerialization.h
    PapyrusStruct.cpp
    PapyrusStruct.h
    PapyrusUI.cpp
    PapyrusUI.h
    PapyrusUtilities.cpp
    PapyrusUtilities.h
    PapyrusUtility.cpp
    PapyrusUtility.h
    PapyrusValue.cpp
    PapyrusValue.h
    PapyrusVM.cpp
    PapyrusVM.h
    PapyrusWaterType.cpp
    PapyrusWaterType.h
    PapyrusWeapon.cpp
    PapyrusWeapon.h
    PluginAPI.h
    PluginManager.cpp
    PluginManager.h
    ScaleformAPI.cpp
    ScaleformAPI.h
    ScaleformCallbacks.cpp
    ScaleformCallbacks.h
    ScaleformLoader.cpp
    ScaleformLoader.h
    ScaleformMovie.cpp
    ScaleformMovie.h
    ScaleformSerialization.cpp
    ScaleformSerialization.h
    ScaleformState.cpp
    ScaleformState.h
    ScaleformTranslator.cpp
    ScaleformTranslator.h
    ScaleformTypes.cpp
    ScaleformTypes.h
    ScaleformValue.cpp
    ScaleformValue.h
    Serialization.cpp
    Serialization.h
    Translation.cpp
    Translation.h
  )
  target_link_libraries(${VARIANT} common f4se_common)
endforeach()